syntax = "proto3";

package services.v1;

service SmartDevicesService {
  rpc setRandomColorInDevice(SetRandomColorInDeviceRequest) returns (Response) {}
  rpc setRandomColor(SetRandomColorRequest) returns (Response) {}
  rpc turnOnDevices(TurnOnDeviceRequest) returns (Response) {}
  rpc turnOffDevices(TurnOffDeviceRequest) returns (Response) {}
}

message SetRandomColorInDeviceRequest {
  repeated string zones = 1;
}

message SetRandomColorRequest {
  repeated string zones = 1;
}

message TurnOnDeviceRequest {
  repeated string zones = 1;
  int32 brightness = 2;
}

message TurnOffDeviceRequest {
  repeated string zones = 1;
}

message Response {
  string status = 1;
}
